<resources>
    <string name="app_name">KhanaRasoi Admin</string>
    <string name="admin_dashbord">Admin Dashbord</string>
    <string name="designer">Designed by Chirag Nikam</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="password">Password</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="account_login">Login To Your Account</string>
    <string name="or">or</string>
    <string name="continue_with">Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="dont_have_account">Don\'t Have Account?</string>
    <string name="signup">SignUp here for your\nAdmin Dashbord</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
</resources>