<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".Activity1_Login">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:contentDescription="app logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtView_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeon_sung_regular"
        android:text="@string/app_name"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/image_logo"
        app:layout_constraintStart_toStartOf="@+id/image_logo"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtView_deliver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/deliver_favorite_food"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/txtView_appName"
        app:layout_constraintStart_toStartOf="@+id/txtView_appName"
        app:layout_constraintTop_toBottomOf="@+id/txtView_appName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/account_login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/txtView_deliver"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="@+id/txtView_deliver"
        app:layout_constraintTop_toBottomOf="@+id/txtView_deliver" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_email_or_phone"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_text"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="17dp"
        android:hint="@string/email_or_phone_number"
        android:paddingStart="17dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/txtView_login"
        app:layout_constraintStart_toStartOf="@+id/txtView_login"
        app:layout_constraintTop_toBottomOf="@+id/txtView_login" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_password"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_text"
        android:drawableStart="@drawable/password"
        android:drawablePadding="17dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="17dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_email_or_phone"
        app:layout_constraintStart_toStartOf="@+id/editText_email_or_phone"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_or_phone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtView_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/yeon_sung_regular"
        android:text="@string/or"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editText_password"
        app:layout_constraintStart_toStartOf="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtView_continue_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeon_sung_regular"
        android:text="@string/continue_with"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/txtView_or"
        app:layout_constraintStart_toStartOf="@+id/txtView_or"
        app:layout_constraintTop_toBottomOf="@+id/txtView_or" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Google"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:background="@drawable/white_button"
        android:drawableStart="@drawable/google_icon"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_facebook"
        app:layout_constraintTop_toBottomOf="@+id/txtView_continue_with"
        app:layout_constraintVertical_bias="0.253" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_facebook"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:background="@drawable/white_button"
        android:drawableStart="@drawable/facebook_icon"
        android:paddingStart="22dp"
        android:paddingEnd="12dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Google"
        app:layout_constraintEnd_toStartOf="@+id/btn_Google"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/green_button"
        android:fontFamily="@font/yeon_sung_regular"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_Google"
        app:layout_constraintStart_toStartOf="@+id/btn_facebook"
        app:layout_constraintTop_toBottomOf="@+id/txtView_continue_with" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtView_dont_have_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/dont_have_account"
        android:textSize="20sp"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/txtView_have_account"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.165" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtView_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/yeon_sung_regular"
        android:gravity="center"
        android:text="@string/designer"
        android:textColor="@color/green"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtView_dont_have_Account"
        app:layout_constraintStart_toStartOf="@+id/txtView_dont_have_Account" />
</androidx.constraintlayout.widget.ConstraintLayout>